# rust-metaprogramming-lab

./: Cargo.toml  README.md
metamodel/: Cargo.toml
metamodel/src/: lib.rs
metamodel_macros/: Cargo.toml
metamodel_macros/src/: codegen.rs  lib.rs  tuple_lang.rs
metamodel_test/: Cargo.toml
metamodel_test/src/: lib.rs
metaprogramming_lab/: Cargo.toml  build.rs
metaprogramming_lab/src/: lib.rs  main.rs
src/: lib.rs  main.rs
