[package]
name = "metamodel_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]

# syn has a lot of features turned off by default
# full enables the Expr types
# extra-traits enables the Debug traits and more
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"

metamodel = { version = "0.1.0", path = "../metamodel"}
