[package]
name = "metaprogramming_lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metamodel = { version = "0.1.0", path = "../metamodel" }
metamodel_macros = { version = "0.1.0", path = "../metamodel_macros" }

fltk = "^1.2"
